force-app/main/default/objects/Borrowing_Record__c/Borrowing_Record__c.object-meta.xml
<CustomObject>
    <label>Borrowing Record</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Borrowing Record id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrowing Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>