force-app/main/default/objects/Borrowing_Record__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Borrowing Records</relationshipLabel>
    <relationshipName>Borrowing_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>