force-app/main/default/objects/Borrowing_Record__c/fields/Book_Title__c.field-meta.xml
<CustomField>
    <fullName>Book_Title__c</fullName>
    <description>Title Of related Book</description>
    <label>Book Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>