force-app/main/default/objects/Borrowing_Record__c/fields/Borrow_Date__c.field-meta.xml
<CustomField>
    <fullName>Borrow_Date__c</fullName>
    <label>Borrow Date</label>
    <type>Date</type>
</CustomField>