force-app/main/default/objects/Borrowing_Record__c/fields/Borrow_Status__c.field-meta.xml
<CustomField>
    <fullName>Borrow_Status__c</fullName>
    <label>Borrow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrowed</fullName>
                <default>true</default>
                <label>Borrowed</label>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>