force-app/main/default/objects/Borrowing_Record__c/fields/Fine__c.field-meta.xml
<CustomField>
    <fullName>Fine__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>