force-app/main/default/objects/Borrowing_Record__c/fields/Is_Returned__c.field-meta.xml
<CustomField>
    <fullName>Is_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Returned</label>
    <type>Checkbox</type>
</CustomField>