force-app/main/default/objects/Borrowing_Record__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <description>Related Member Name</description>
    <label>Member Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>