force-app/main/default/objects/Borrowing_Record__c/fields/Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Days__c</fullName>
    <description>Days After Due date</description>
    <formula>TODAY() -  Due_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>