force-app/main/default/objects/Borrowing_Record__c/validationRules/Book_Must_Be_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Book_Must_Be_Available</fullName>
    <active>true</active>
    <description>Book status Should be Available</description>
    <errorConditionFormula>NOT(ISPICKVAL( Book__r.Availability_Status__c ,&quot;Available&quot;))</errorConditionFormula>
    <errorDisplayField>Book__c</errorDisplayField>
    <errorMessage>This book is not available for borrowing.</errorMessage>
</ValidationRule>