force-app/main/default/objects/Borrowing_Record__c/validationRules/Borrow_Date_should_less_than_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Borrow_Date_should_less_than_Due_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Due_date__c &lt;  Borrow_Date__c</errorConditionFormula>
    <errorDisplayField>Due_date__c</errorDisplayField>
    <errorMessage>Due Date Should be Greater Than Borrow Date</errorMessage>
</ValidationRule>