force-app/main/default/objects/Borrowing_Record__c/validationRules/Borrow_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Borrow_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Borrow_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Borrow_Date__c</errorDisplayField>
    <errorMessage>Borrow date should be less than or equals to today</errorMessage>
</ValidationRule>