force-app/main/default/objects/Borrowing_Record__c/validationRules/Borrow_limit_Exceeded.validationRule-meta.xml
<ValidationRule>
    <fullName>Borrow_limit_Exceeded</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL( Borrow_Status__c , &quot;Borrowed&quot;),
    Member__r.Borrow_Count__c  &gt;= 4
)</errorConditionFormula>
    <errorMessage>You cannot borrow 4 books at a time</errorMessage>
</ValidationRule>