force-app/main/default/objects/Borrowing_Record__c/validationRules/Inactive_Member_cannot_Borrow_Books.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Member_cannot_Borrow_Books</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Member__r.Status__c , &quot;Inactive&quot;)</errorConditionFormula>
    <errorDisplayField>Member__c</errorDisplayField>
    <errorMessage>In-Active User cannot Borrow the Books.</errorMessage>
</ValidationRule>