force-app/main/default/objects/Borrowing_Record__c/validationRules/Invalid_Return_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Return_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
       NOT(  ISBLANK( Return_Date__c ) ),
        Return_Date__c  &lt;  Borrow_Date__c 
)</errorConditionFormula>
    <errorDisplayField>Return_Date__c</errorDisplayField>
    <errorMessage>Return Date cannot be less than Borrow Date</errorMessage>
</ValidationRule>