force-app/main/default/objects/Borrowing_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Member_Name__c</columns>
    <columns>Book__c</columns>
    <columns>Book_Title__c</columns>
    <columns>Borrow_Date__c</columns>
    <columns>Due_date__c</columns>
    <columns>Return_Date__c</columns>
    <columns>Overdue_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>