force-app/main/default/objects/Borrowing_Record__c/listViews/My_Borrowing_Records.listView-meta.xml
<ListView>
    <fullName>My_Borrowing_Records</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Book__c</columns>
    <columns>Book_Title__c</columns>
    <columns>Borrow_Date__c</columns>
    <columns>Due_date__c</columns>
    <columns>Fine__c</columns>
    <columns>Borrow_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Borrowing Records</label>
</ListView>